# warehouse_project

./: frames_2025-04-23_06.20.52.gv  frames_2025-04-23_08.30.23.gv
attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml  rviz2.launch.py
attach_shelf/rviz/: attach_shelf.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
attach_shelf/test/: CMakeLists copy.txt  approach_service_server copy 1.cpp  approach_service_server copy 2.cpp  approach_service_server_main copy.cpp  approach_service_server_main.cpp  attach_to_shelf.launch copy.py  pre_approach copy.cpp  pre_approach_main.cpp  pre_approach_v2 copy 1.cpp  pre_approach_v2 copy.cpp  pre_approach_v2 copy.h  pre_approach_v2_main copy.cpp  pre_approach_v2_main.cpp
cartographer_slam/: package.xml  setup.py
cartographer_slam/config/: cartographer_real.lua  cartographer_sim.lua  warehouse_map_sim.yaml
cartographer_slam/launch/: cartographer.launch.py
cartographer_slam/rviz/: mapping.rviz
localization_server/: package.xml  setup.py
localization_server/config/: amcl_config_real.yaml  amcl_config_sim.yaml
localization_server/launch/: localization.launch.py
localization_server/rviz/: localization.rviz
map_server/: package.xml  setup.py
map_server/config/: warehouse_map_keepout_real.pgm  warehouse_map_keepout_real.yaml  (+4 more)
nav2_apps/: CMakeLists.txt  package.xml  setup.py
nav2_apps/scripts/: move_shelf_to_ship.py  move_shelf_to_ship_real.py
path_planner_server/: package.xml  setup.py
(+17 files in other folders)
